# turbulent_propagation

./: .gitignore  pyproject.toml
benchmarks/: benchmark.py
docs/: spectra.md
examples/: phase_screen_validation.py  pyproject.toml  scintilation.ipynb  spectrum_comparison.py
src/turbulent_propagation/: __init__.py  expected_correlation_functions.py  free_propagation.py  phase_screens.py  spectra.py  turbulent_propagation.py  utils.py
test/: test_angular_spectrum.py  test_phase_screen.py
